compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_struct_snapshots@multiple_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"struct Test<T1, T2> {}\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        7..11,
                    ),
                },
                properties: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: Location(
                                12..14,
                            ),
                        },
                        constraints: [],
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: Location(
                                16..18,
                            ),
                        },
                        constraints: [],
                    },
                ],
                location: Location(
                    0..22,
                ),
                documentation: None,
            },
        ),
    ),
]
