compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_struct_snapshots@no_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"struct Test {}\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        7..11,
                    ),
                },
                builtin: false,
                properties: [],
                type_parameters: [],
                location: Location(
                    0..14,
                ),
                documentation: None,
            },
        ),
    ),
]
