compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_struct_snapshots@single_generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"struct Test<T> {}\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        7..11,
                    ),
                },
                builtin: false,
                properties: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T",
                            location: Location(
                                12..13,
                            ),
                        },
                        constraints: [],
                    },
                ],
                location: Location(
                    0..17,
                ),
                documentation: None,
            },
        ),
    ),
]
