compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@bool_false.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"false\")"
---
[
    Expression(
        Literal(
            Boolean(
                BooleanLiteral {
                    value: false,
                    location: Location(
                        0..5,
                    ),
                },
            ),
        ),
    ),
]
