compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@bool_true.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"true\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    Expression(
                        Literal(
                            Boolean(
                                BooleanLiteral {
                                    value: true,
                                    location: Location(
                                        20..24,
                                    ),
                                },
                            ),
                        ),
                    ),
                ],
                location: Location(
                    18..26,
                ),
            },
            location: Location(
                0..26,
            ),
        },
    ),
]
