compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@ident_case.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"IDENT\")"
---
[
    Expression(
        Variable(
            Variable {
                name: Identifier {
                    name: "IDENT",
                    location: Location(
                        0..5,
                    ),
                },
            },
        ),
    ),
]
