compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@ident_underscore.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"__IDENT__\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    13..17,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                13..17,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [
                    Expression(
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "__IDENT__",
                                    location: Location(
                                        20..29,
                                    ),
                                },
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..31,
                ),
            },
            location: Location(
                0..31,
            ),
            documentation: None,
        },
    ),
]
