compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@int.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"0\")"
---
[
    Expression(
        Literal(
            Int(
                IntLiteral {
                    value: 0,
                    location: Location(
                        0..1,
                    ),
                    kind: I32,
                },
            ),
        ),
    ),
]
