compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@int_bin_positive.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"0b01010101\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    Expression(
                        Literal(
                            Int(
                                IntLiteral {
                                    value: 85,
                                    location: Location(
                                        20..30,
                                    ),
                                    kind: I32,
                                },
                            ),
                        ),
                    ),
                ],
                location: Location(
                    18..32,
                ),
            },
            location: Location(
                0..32,
            ),
        },
    ),
]
